correcao do statusbar e nova versao

--- a/www/index.html
+++ b/www/index.html
@@ -284,7 +284,7 @@
             Convide um amigo para tomar uma!
           </button>
           <button class="button button-block button-event" ng-click="convideApp()">
-            Convide um amigo para baixar nosso app!
+            Indique o app para um amigo!
           </button>
         </ion-content>
       </ion-modal-view>
