interface para chat

--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,7 @@
     <script src="js/Service_Amizade.js"></script>
     <script src="js/diretivas.js"></script>
     <script src="js/funcoes.js"></script>
+    <script src="js/papuchat.js"></script>
 
     
   </head>
@@ -206,6 +207,7 @@
               <a href="#/menu/bares" class="item" menu-close><i class="icon ion-ios-location" ></i> Bares</a>
               <a href="#/menu/cartoes" class="item" menu-close><i class="icon ion-card" ></i> Cartões</a>
               <a href="#/menu/promocao" class="item" menu-close><i class="icon ion-bag" ></i> Promoções</a>
+              <a href="#/barmsg" class="item" menu-close><i class="icon ion-email" ></i> Mensagens do Bar</a>
               <a href="#/menu/dados" class="item" menu-close><i class="icon ion-android-home" ></i> Meus Dados</a>
               <a href="#/menu/config" class="item" menu-close><i class="icon ion-ios-gear-outline" ></i> Configurações</a>
               <a href="#/menu/sobre" class="item" menu-close><i class="icon ion-ios-information" ></i> Sobre</a>
