* notification com alerta.

--- a/www/index.html
+++ b/www/index.html
@@ -204,10 +204,10 @@
           <ion-content ng-controller="Sidebar" class="bar-royal">
             <ul class="list">
               <a href="#/menu/home" class="item" menu-close><i class="icon ion-android-home" ></i> Home</a>
-              <a href="#/menu/meuscartoes" class="item" menu-close><i class="icon ion-card" ></i> Cartões Pessoais</a>
+              <a href="#/menu/meuscartoes" class="item" menu-close><i class="icon ion-card" ></i> Clubes pessoais</a>
               <a href="#/menu/amigos" class="item" menu-close><i class="icon ion-person-stalker" ></i> Amigos</a>
               <a href="#/menu/bares" class="item" menu-close><i class="icon ion-ios-location" ></i> Bares</a>
-              <a href="#/menu/cartoes" class="item" menu-close><i class="icon ion-card" ></i> Cartões</a>
+              <a href="#/menu/cartoes" class="item" menu-close><i class="icon ion-card" ></i> Clubes (bar/restaurante)</a>
               <a href="#/menu/promocao" class="item" menu-close><i class="icon ion-bag" ></i> Promoções</a>
               <a href="#/barmsg" class="item" menu-close><i class="icon ion-email" ></i> Mensagens do Bar</a>
               <a href="#/menu/dados" class="item" menu-close><i class="icon ion-android-home" ></i> Meus Dados</a>
@@ -288,7 +288,7 @@
             Convide um amigo para tomar uma!
           </button>
           <button class="button button-block button-event" ng-click="convideApp()">
-            Indique o app para um amigo!
+            Indique o WhiskYou para um amigo!
           </button>
         </ion-content>
       </ion-modal-view>
