--- a/www/index.html
+++ b/www/index.html
@@ -295,7 +295,7 @@
     </script>
 
     <script id="meuscartoes" type="text/ng-template">
-      <ion-view view-title="Meus Cartões" ng-controller="MeusCartoes" data-ng-init="init()">
+      <ion-view view-title="Meus Clubes" ng-controller="MeusCartoes" data-ng-init="init()">
         <ion-nav-buttons side="right">
           <a href="#/addCartao" class="button button-icon icon ion-plus"></a>
         </ion-nav-buttons>
@@ -323,8 +323,8 @@
           </div>
         </ion-content>
         <div class="bar bar-footer button-event" style="text-align:center">
-          <button class="button button-icon icon "  ng-click="mudarVencido()">Cartões Vencidos</button>
-          <button class="button button-icon icon "  ng-click="mudarAberto()">Cartões Abertos</button>
+          <button class="button button-icon icon "  ng-click="mudarVencido()">Clubes Vencidos</button>
+          <button class="button button-icon icon "  ng-click="mudarAberto()">Clubes Abertos</button>
         </div>
       </ion-view>
     </script>
@@ -607,7 +607,7 @@
     </script>
 
     <script id="cartoes" type="text/ng-template">
-      <ion-view title="Cartões" ng-controller="Cartoes">
+      <ion-view title="Clubes" ng-controller="Cartoes">
           <ion-content padding="true" class="has-header">
             <ion-refresher on-refresh="doRefresh()"></ion-refresher>
             <div class="list">
@@ -726,7 +726,7 @@
                     </ion-toggle>
 
                     <ion-toggle ng-model="privacidade" ng-change="ConfigChange()">
-                      Mostrar cartões privados
+                      Mostrar clubes privados
                     </ion-toggle>
                   </ul>
                   <input type="submit" id="submit" value="Salvar" class="button button-event button-block" />
@@ -738,7 +738,7 @@
     </script>
 
     <script id="addCartao" type="text/ng-template">
-      <ion-view view-title="Novo Cartão">
+      <ion-view view-title="Novo Clube">
 
         <ion-nav-bar class="bar-royal" ng-controller="Back">
           <ion-nav-buttons side="left">
@@ -782,7 +782,7 @@
             <div class="row">
               <div class="col">
                 <label class="item item-checkbox">
-                  <span class="input-label">Cartão Secreto </span>
+                  <span class="input-label">Clube Secreto </span>
                   <label class="checkbox">
                     <input type="checkbox" ng-model="secreto">
                   </label>
@@ -811,7 +811,7 @@
               </div>
               <div class="col">
                 <img ng-src="{{imgCard}}" width="100%" ng-click="openModal(2)">
-                <button ng-click="capturePhoto(2)" class="button button-small button-positive icon-left ion-ios-camera">Tirar Foto do Cartão</button>
+                <button ng-click="capturePhoto(2)" class="button button-small button-positive icon-left ion-ios-camera">Tirar Foto do Clube</button>
               </div>
             </div>
             <br/><br/>
@@ -838,7 +838,7 @@
     </script>
 
     <script id="updatecartao" type="text/ng-template">
-      <ion-view view-title="Atualizar Cartão">
+      <ion-view view-title="Atualizar Clube">
 
         <ion-nav-bar class="bar-royal" ng-controller="Back">
           <ion-nav-buttons side="left">
@@ -890,7 +890,7 @@
               </div>
               <div class="col">
                 <img ng-src="{{imgCard}}" width="100%" ng-click="openModal(2)">
-                <button ng-click="capturePhoto(2)" class="button button-small button-positive icon-left ion-ios-camera">Tirar Foto do Cartão</button>
+                <button ng-click="capturePhoto(2)" class="button button-small button-positive icon-left ion-ios-camera">Tirar Foto do Clube</button>
               </div>
             </div>
           </form>
