sugestao do bar no checking

--- a/www/index.html
+++ b/www/index.html
@@ -270,6 +270,9 @@
           <button class="button button-block button-event" ng-click="checkin(bar)">
             Check-in
           </button>
+          <button class="button button-block button-event" ng-click="sugerir()">
+            Sugira um bar
+          </button>
         </ion-content>
       </ion-modal-view>
     </script>
