--- a/www/index.html
+++ b/www/index.html
@@ -325,11 +325,30 @@
               </a>
             </div>
           </div>
+
+          
+
+           <div align="center" ng-show="cartoesVencidos.length">
+             <hr/>
+             <b style="color:red">Clubes Vencidos</b>
+           </div>
+          <div ng-repeat="cartao in cartoesVencidos">
+            <div class="card">
+              <a href="#/cartao/{{cartao.id}}" class="item item-text-wrap" >
+                <div class="row">
+                  <div class="col"><img ng-src = "{{cartao.historics[cartao.historics.length-1].image_drink.url}}" width="100%"></div>
+                  <div class="col col-75">
+                    Bar: <b>{{ cartao.bar }}</b><br>
+                    Bebida: {{ cartao.drink }}<br>
+                    Doses restantes: <b>{{ cartao.remaining_doses}}/{{cartao.total_doses }}</b><br>
+                    Vencimento: <b style="color:red">{{ cartao.due_date | date:'dd/MM/yyyy'}}</b>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
         </ion-content>
-        <div class="bar bar-footer button-event" style="text-align:center">
-          <button class="button button-icon icon "  ng-click="mudarVencido()">Clubes Vencidos</button>
-          <button class="button button-icon icon "  ng-click="mudarAberto()">Clubes Abertos</button>
-        </div>
       </ion-view>
     </script>
 
