--- a/www/index.html
+++ b/www/index.html
@@ -644,7 +644,8 @@
             <ion-refresher on-refresh="doRefresh()"></ion-refresher>
             <div class="list">
               <div align="center" class="msg" id="msgcartoes">{{msg}}</div>
-              <div ng-repeat="module in Cartoes">
+
+              <div ng-repeat="module in atuais">
                 <a href="#/cartaoBarHistorico/{{module.id}}">
                 <div class="item " ng-hide="module.card_secret">
 
@@ -664,10 +665,30 @@
                 </a>
               </div>
             </div>
+
+
+            <div align="center" ng-show="vencidos.length">
+             <hr/>
+             <b style="color:red">Clubes Vencidos</b>
+           </div>
+          <div ng-repeat="cartao in vencidos">
+            <div class="card">
+              <a href="#/cartao/{{cartao.id}}" class="item item-text-wrap" >
+                <div class="row">
+                  <div class="col"><img ng-src = "{{cartao.historics[cartao.historics.length-1].image_drink.url}}" width="100%"></div>
+                  <div class="col col-75">
+                    Bar: <b>{{ cartao.bar }}</b><br>
+                    Bebida: {{ cartao.drink }}<br>
+                    Doses restantes: <b>{{ cartao.remaining_doses}}/{{cartao.total_doses }}</b><br>
+                    Vencimento: <b style="color:red">{{ cartao.due_date | date:'dd/MM/yyyy'}}</b>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+
           </ion-content>
-        <div class="bar bar-footer button-event" style="text-align:center">
-          <button class="button button-icon icon ion-alert-circled" ng-click="mudar()">{{labelCartao}}</button>
-        </div>
       </ion-view>
     </script>
 
