--- a/www/index.html
+++ b/www/index.html
@@ -521,6 +521,31 @@
       </ion-view>
     </script>
 
+<script id="baresMensagem" type="text/ng-template">
+<ion-view view-title="Mensagens" ng-controller="Chat">
+  <ion-nav-bar class="bar-royal" ng-controller="Back">
+    <ion-nav-buttons side="left">
+      <button class="button back-button buttons button-clear header-item" ng-click="myGoBack()">
+        <i class="ion-chevron-left"></i> Voltar
+      </button>
+    </ion-nav-buttons>
+  </ion-nav-bar>
+
+  <ion-content padding="true" class="has-header">
+    <p>Lista das mensagens dos bares</p>
+    <div class="list">
+        <a class="item item-avatar" href="#/messages/{{ chat.id }}" ng-repeat="chat in chats">
+          <img src="{{ chat.logo }}">
+          <h2>{{ chat.barname }}</h2>
+          <p>{{ chat.text }}</p>
+        </a>
+    </div>
+  </ion-content>
+
+
+</ion-view>
+</script>
+
     <script id="bares" type="text/ng-template">
       <ion-view view-title="Bares" ng-controller="Bares">
 
@@ -550,40 +575,6 @@
             </div>
           </div>
 
-        </ion-content>
-      </ion-view>
-    </script>
-
-    <script id="bar" type="text/ng-template" >
-      <ion-view view-title="Papudinho" >
-
-        <ion-nav-bar class="bar-royal" ng-controller="Back">
-          <ion-nav-buttons side="left">
-            <button class="button back-button buttons button-clear header-item" ng-click="myGoBack()">
-              <i class="ion-chevron-left"></i> Voltar
-            </button>
-          </ion-nav-buttons>
-        </ion-nav-bar>
-
-        <ion-content padding="true" class="has-header" ng-controller="Bar">
-          <div class="list card">
-
-            <div class="item item-avatar">
-              <img src="{{bar.logo.thumb.url}}">
-              <h2>{{bar.name}}</h2>
-              <a href="tel:{{bar.phone}}" class="button button-clear button-positive icon-left ion-android-call">{{bar.phone}}</a>
-            </div>
-
-            <div class="item item-body">
-               <img class="full-image" src="{{bar.logo.url}}">
-              <p>
-                {{bar.city}} - {{bar.state}}<br>
-                {{bar.district}} - {{bar.street}}, {{bar.number}}<br>
-                <a href = "#" class="button button-clear button-positive" ng-click="link(bar.site)">{{bar.site}}</a>
-              </p>
-            </div>
-
-          </div>
         </ion-content>
       </ion-view>
     </script>
