foto da ultimo cartao

--- a/www/index.html
+++ b/www/index.html
@@ -314,7 +314,7 @@
             <div class="card">
               <a href="#/cartao/{{cartao.id}}" class="item item-text-wrap" >
                 <div class="row">
-                  <div class="col"><img ng-src = "{{cartao.historics[cartao.historics.length-1].image_drink.url}}" width="100%"></div>
+                  <div class="col"><img ng-src = "{{cartao.historics[0].image_drink.url}}" width="100%"></div>
                   <div class="col col-75">
                     Bar: <b>{{ cartao.bar }}</b><br>
                     Bebida: {{ cartao.drink }}<br>
