botao excluir da solicitacao de amizade

--- a/www/index.html
+++ b/www/index.html
@@ -475,7 +475,7 @@
         <ion-header-bar>
           <h1 class="title">Solicitações pentendentes</h1>
           <div class="buttons">
-            <button class="button button-clear ion-close-circled" ng-click="closeModal()"></button>
+            <button class="button button-clear ion-close-circled" style="color:#000" ng-click="closeModal()"></button>
           </div>
         </ion-header-bar>
         <ion-content>
