mudanda do nome

--- a/www/index.html
+++ b/www/index.html
@@ -61,7 +61,7 @@
     <ion-nav-view></ion-nav-view>
 
     <script id="login" type="text/ng-template" >
-      <ion-view title="Papudinho" class="bg">
+      <ion-view title="WhiskYou" class="bg">
           <ion-nav-bar class="bar-royal" style="display:none;"></ion-nav-bar>
           <ion-content padding="true" class="has-header login" >
               <div style="border: 0px; text-align: center; " >
@@ -729,7 +729,7 @@
       <ion-view title="Sobre" >
           <ion-content padding="true" class="has-header">
 
-            <h2>Papudinho - Clube do Whisky</h2>
+            <h2>WhiskYou</h2>
             <h3>Versão: 1.41.0</h3>
             <h3>Todos os direitos reservados para Global Gapps</h3>
             <h3>2016</h3>
