--- a/www/index.html
+++ b/www/index.html
@@ -584,13 +584,19 @@
         <ion-header-bar>
           <h1 class="title">{{bar.name}}</h1>
           <div class="buttons">
-            <button class="button button-clear ion-close-circled" ng-click="closeModal(1)"></button>
+            <button class="button button-clear ion-close-circled" style="color:black" ng-click="closeModal()"></button>
           </div>
         </ion-header-bar>
         <ion-content>
+          <div style="text-align:center;margin-top:10px"> 
+            <img src="{{bar.logo.thumb.url}}" align="center" />
+          </div>
           <br><br>
           <p align="center">Endereço: {{bar.street}}, {{bar.state}} - {{bar.cep}}</p>
           <p align="center">Telefone: {{bar.phone}}</p>
+          <p align="center"></p>
+         <p align="center"> 
+         <a class="button icon-left ion-ios-location" href="geo:{{bar.latitude}},{{bar.longitude}}" style="color:black">View on Google Maps</a><p align="center">
           
         </ion-content>
       </ion-modal-view>
