nome papudinho removido

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>WhiskYou</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -222,7 +222,7 @@
     </script>
 
     <script id="home" type="text/ng-template">
-      <ion-view view-title="Papudinho" ng-controller="Home">
+      <ion-view view-title="WhiskYou" ng-controller="Home">
         <ion-content padding="true" class="has-header">
           <div align="center">{{msg}}</div>
           <div ng-repeat="cartao in CartoesVencimento">
