pull refesh e botao voltar

--- a/www/index.html
+++ b/www/index.html
@@ -299,11 +299,14 @@
 
     <script id="meuscartoes" type="text/ng-template">
       <ion-view view-title="Meus Clubes" ng-controller="MeusCartoes" data-ng-init="init()">
+      
         <ion-nav-buttons side="right">
           <a href="#/addCartao" class="button button-icon icon ion-plus"></a>
         </ion-nav-buttons>
 
         <ion-content padding="true" class="has-header">
+          <ion-refresher on-refresh="doRefresh()" disable-pulling-rotation="false"></ion-refresher>
+
           <div align="center">
             <ion-spinner icon="lines" class="spinner-calm" ng-show="checked"></ion-spinner><br/>{{msg}}
           </div>
@@ -355,7 +358,7 @@
     <script id="cartao" type="text/ng-template">
       <ion-view view-title="Histórico" ng-controller="Cartao">
 
-      <ion-nav-bar class="bar-royal" ng-controller="Back">
+      <ion-nav-bar class="bar-royal">
         <ion-nav-buttons side="left">
           <button class="button back-button buttons button-clear header-item" ng-click="myGoBack()">
             <i class="ion-chevron-left"></i> Voltar
