--- a/www/index.html
+++ b/www/index.html
@@ -595,7 +595,7 @@
         </ion-header-bar>
         <ion-content>
           <div style="text-align:center;margin-top:10px"> 
-            <img src="{{bar.logo.thumb.url}}" align="center" />
+            <img src="{{bar.logo.url}}" align="center" />
           </div>
           <br><br>
           <p align="center">Endereço: {{bar.street}}, {{bar.state}} - {{bar.cep}}</p>
