--- a/www/index.html
+++ b/www/index.html
@@ -387,10 +387,10 @@
                     Criado: {{cartao.created_at | date:'dd/MM/yyyy HH:mm:ss'}}<br>
                     <div class="row">
                       <div class="col">
-                        <img ng-src="{{cartao.image_drink.url}}" width="100%" ng-click="openModal(1)">
+                        <img ng-src="{{cartao.image_drink.thumb.url}}" width="100%" ng-click="openModal(1)">
                       </div>
                       <div class='col'>
-                        <img ng-src="{{cartao.image_card.url}}" width="100%" ng-click="openModal(2)">
+                        <img ng-src="{{cartao.image_card.thumb.url}}" width="100%" ng-click="openModal(2)">
                       </div>
                     </div>
                   </div>
@@ -430,12 +430,13 @@
                 Vencimento: {{ vencimento | date:'dd/MM/yyyy' }} <br>
                 Atualizado em: {{detalhe.updated_at | date:'dd/MM/yyyy HH:mm:ss'}}<br>
                 Criado: {{detalhe.created_at | date:'dd/MM/yyyy HH:mm:ss'}}<br>
+
                 <div class="row">
                   <div class="col">
-                    <img ng-src="{{detalhe.image_drink.url}}" width="100%" ng-click="openModal(1)">
+                    <img ng-src="{{detalhe.image_drink.thumb.url}}" width="100%" ng-click="openModal(1)">
                   </div>
                   <div class='col'>
-                    <img ng-src="{{detalhe.image_card.url}}" width="100%" ng-click="openModal(2)">
+                    <img ng-src="{{detalhe.image_card.thumb.url}}" width="100%" ng-click="openModal(2)">
                   </div>
                 </div>
               </p>
