--- a/www/index.html
+++ b/www/index.html
@@ -308,7 +308,7 @@
           <ion-refresher on-refresh="doRefresh()" disable-pulling-rotation="false"></ion-refresher>
 
           <div align="center">
-            <ion-spinner icon="lines" class="spinner-calm" ng-show="checked"></ion-spinner><br/>{{msg}}
+            <ion-spinner icon="lines" class="spinner-calm" ng-show="checked"></ion-spinner><br/>
           </div>
           <div>
             {{label}}
@@ -741,7 +741,7 @@
           <ion-content padding="true" class="has-header">
 
             <h2>WhiskYou</h2>
-            <h3>Versão: 1.41.0</h3>
+            <h3>Versão: 1.50.0</h3>
             <h3>Todos os direitos reservados para Global Gapps</h3>
             <h3>2016</h3>
 
