--- a/www/index.html
+++ b/www/index.html
@@ -991,7 +991,8 @@
           </ion-nav-buttons>
         </ion-nav-bar>
 
-        <ion-content padding="true" class="has-header" ng-controller="ChatUsuarios">
+        <div  ng-controller="ChatUsuarios">
+        <ion-content padding="true" class="has-header">
           <ul class="list">
             <li class="item" ng-repeat="message in messages">
               <div class="chat-eu" ng-if="message.name == meuName">{{message.text}}</div>
@@ -1001,9 +1002,10 @@
           <p>&nbsp;</p>
         </ion-content>
         <div class="bar bar-footer bar-royal" ng-controller="Chat"  >
-          <input class="chat-input" type="text" ng-model="message">
+          <input class="chat-input" type="text" id="message">
           <button class="button button-event " ng-click="addMessage()">Enviar</button>
         </div>
+      </div>
       </ion-view>
     </script>
 
