--- a/www/index.html
+++ b/www/index.html
@@ -213,7 +213,7 @@
               <a href="#/menu/dados" class="item" menu-close><i class="icon ion-android-home" ></i> Meus Dados</a>
               <a href="#/menu/config" class="item" menu-close><i class="icon ion-ios-gear-outline" ></i> Configurações</a>
               <a href="#/menu/sobre" class="item" menu-close><i class="icon ion-ios-information" ></i> Sobre</a>
-              <a href="#" class="item" menu-close ng-click="sair()"><i class="icon ion-forward" ></i> Sair</a>
+              <a href="#/menu/logoff" class="item" menu-close ><i class="icon ion-forward" ></i> Sair</a>
             </ul>
           </ion-content>
         </ion-side-menu>
@@ -229,7 +229,7 @@
             <div class="card" ng-hide="cartao.card_secret">
               <div class="item item-text-wrap" >
                 <div class="row">
-                  <div class="col"><img ng-src = "{{cartao.historics[cartao.historics.length-1].image_drink.url}}" width="100%"></div>
+                  <div class="col"><img ng-src = "{{cartao.historics[0].image_drink.thumb.url}}" width="100%"></div>
                   <div class="col col-75">
                     Bar: <b>{{ cartao.bar }}</b><br>
                     Bebida: {{ cartao.drink }}<br>
@@ -528,30 +528,6 @@
       </ion-view>
     </script>
 
-<script id="baresMensagem" type="text/ng-template">
-<ion-view view-title="Mensagens" ng-controller="Chat">
-  <ion-nav-bar class="bar-royal" ng-controller="Back">
-    <ion-nav-buttons side="left">
-      <button class="button back-button buttons button-clear header-item" ng-click="myGoBack()">
-        <i class="ion-chevron-left"></i> Voltar
-      </button>
-    </ion-nav-buttons>
-  </ion-nav-bar>
-
-  <ion-content padding="true" class="has-header">
-    <p>Lista das mensagens dos bares</p>
-    <div class="list">
-        <a class="item item-avatar" href="#/messages/{{ chat.id }}" ng-repeat="chat in chats">
-          <img src="{{ chat.logo }}">
-          <h2>{{ chat.barname }}</h2>
-          <p>{{ chat.text }}</p>
-        </a>
-    </div>
-  </ion-content>
-
-
-</ion-view>
-</script>
 
     <script id="bares" type="text/ng-template">
       <ion-view view-title="Bares" ng-controller="Bares">
@@ -672,7 +648,7 @@
 
                   <div class="row">
 
-                    <div class="col"><img ng-src = "{{module.historics[module.historics.length-1].image_drink.url}}" width="100%"></div>
+                    <div class="col"><img ng-src = "{{module.historics[0].image_drink.url}}" width="100%"></div>
                     <div class="col col-75">
                       Bar:  <b>{{ module.bar }}</b><br>
                       Bebida: {{ module.drink }} <br>
@@ -1012,6 +988,19 @@
       </div>
       </ion-view>
     </script>
+
+
+    <script id="logoff" type="text/ng-template" >
+      <ion-view>
+
+        <ion-content padding="true" class="has-header" ng-controller="Sidebar" ng-init="logoff()">
+        <div style="text-align:center">
+            <ion-spinner icon="lines" class="spinner-calm" ng-show="checked"></ion-spinner>
+         </div>
+        </ion-content>
+      </ion-view>
+    </script>
+
 
   </body>
 </html>
