APP14 - envio de mensagem em branco

--- a/www/index.html
+++ b/www/index.html
@@ -317,7 +317,7 @@
             <div class="card">
               <a href="#/cartao/{{cartao.id}}" class="item item-text-wrap" >
                 <div class="row">
-                  <div class="col"><img ng-src = "{{cartao.historics[0].image_drink.url}}" width="100%"></div>
+                  <div class="col"><img ng-src = "{{cartao.historics[0].image_drink.thumb.url}}" width="100%"></div>
                   <div class="col col-75">
                     Bar: <b>{{ cartao.bar }}</b><br>
                     Bebida: {{ cartao.drink }}<br>
@@ -339,7 +339,7 @@
             <div class="card">
               <a href="#/cartao/{{cartao.id}}" class="item item-text-wrap" >
                 <div class="row">
-                  <div class="col"><img ng-src = "{{cartao.historics[cartao.historics.length-1].image_drink.url}}" width="100%"></div>
+                  <div class="col"><img ng-src = "{{cartao.historics[0].image_drink.thumb.url}}" width="100%"></div>
                   <div class="col col-75">
                     Bar: <b>{{ cartao.bar }}</b><br>
                     Bebida: {{ cartao.drink }}<br>
@@ -670,7 +670,7 @@
            </div>
           <div ng-repeat="cartao in vencidos">
             <div class="card">
-              <a href="#/cartao/{{cartao.id}}" class="item item-text-wrap" >
+              <a href="#/cartaoBarHistorico/{{cartao.id}}" class="item item-text-wrap" >
                 <div class="row">
                   <div class="col"><img ng-src = "{{cartao.historics[cartao.historics.length-1].image_drink.url}}" width="100%"></div>
                   <div class="col col-75">
@@ -1003,7 +1003,7 @@
 
 
     <script id="barMensagem" type="text/ng-template" >
-      <ion-view>
+      <ion-view view-title="Mensagens">
 
         <ion-content padding="true" class="has-header" view-title="Mensagens" ng-controller="Chat">
         <p>Lista das mensagens dos bares</p>
