APP21 - clube a expirar

--- a/www/index.html
+++ b/www/index.html
@@ -333,7 +333,7 @@
 
            <div align="center" ng-show="cartoesVencidos.length">
              <hr/>
-             <b style="color:red">Clubes Vencidos</b>
+             <b style="color:red">Clubes expirados</b>
            </div>
           <div ng-repeat="cartao in cartoesVencidos">
             <div class="card">
@@ -666,7 +666,7 @@
 
             <div align="center" ng-show="vencidos.length">
              <hr/>
-             <b style="color:red">Clubes Vencidos</b>
+             <b style="color:red">Clubes expirados</b>
            </div>
           <div ng-repeat="cartao in vencidos">
             <div class="card">
