APP23 - bares menores

--- a/www/index.html
+++ b/www/index.html
@@ -572,7 +572,7 @@
         </ion-header-bar>
         <ion-content>
           <div style="text-align:center;margin-top:10px">
-            <img src="{{bar.logo.url}}" align="center" />
+            <img src="{{bar.logo.url}}" align="center" style="width:40%" />
           </div>
           <br><br>
           <p align="center">Endereço: {{bar.street}}, {{bar.state}} - {{bar.cep}}</p>
