--- a/www/index.html
+++ b/www/index.html
@@ -242,8 +242,8 @@
           </div>
         </ion-content>
         <div class="bar bar-footer button-event">
-          <button class="button button-icon icon ion-android-checkmark-circle" ng-click="openModal(1)">Check-in</button>
-          <button class="button button-clear button-positive icon ion-android-share-alt" ng-click="openModal(2)">Compartilhe</button>
+          <button class="button button-energized icon ion-android-checkmark-circle" style="color:black" ng-click="openModal(1)">Check-in</button>
+          <button class="button button-energized icon ion-android-share-alt" style="color:black"ng-click="openModal(2)">Compartilhe</button>
         </div>
       </ion-view>
     </script>
